# DynamiCrafter

./: README.md  pyproject.toml
scripts/: install_torch.py
scripts/gradio/: i2v_test.py  i2v_test_application.py
